Archive2/ad/33d6f4a3eca64a/output
main.cpp:2:5: error: 'string' in namespace 'std' does not name a type
     std::string member; // decl-specifier-seq is "std::string"
     ^
main.cpp:9:17: error: 'NULL' was not declared in this scope
 int a = 1, *p = NULL, f(), (*pf)(double);
                 ^
main.cpp:18:28: error: 'NULL' was not declared in this scope
 int (*(*foo)(double))[3] = NULL;
                            ^
